[project]
name = "mtproto-proxy-checker"
version = "1.0.0"
description = "MTProto proxy health checker with Telegram notifications"
requires-python = ">=3.11"
dependencies = ["telethon>=1.36"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
